# memorize25

./: .gitignore  README.md  SConstruct  custom.py.example  pyproject.toml  shell.sh
configs/eval/: beginning_of_paragraph.yaml  few_shot_prompt.yaml  instruction_prompt.yaml  random_place_in_paragraph.yaml
configs/in_progress/: multiple_corpora.yaml
configs/train/: large_chunks.yaml  small_chunks.yaml
data/: dante.txt
notebooks/: characterization.ipynb
scripts/: callbacks.py  characterize_memorization.py  check_gpu_requirements.py  clean_eval.py  eval_model.py  llm_benchmark.py  push_to_hub.py  train_model.py  unzip.py  utils.py
