[project]
name = "memorize25"
version = "0.1.0"
description = ""
authors = [
    {name = "Hope",email = "hope.mcgovern@cl.cam.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "steamroller @ git+https://github.com/hmcgovern/steamroller.git@master",
    "bitsandbytes (>=0.45.1,<0.46.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "wandb (>=0.19.6,<0.20.0)",
    "transformers (>=4.48.2,<5.0.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "nvidia-ml-py3 (>=7.352.0,<8.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "bleu (>=0.3,<0.4)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
